# remotemedia-sdk

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  ARCHIVE_VERIFICATION.md  BENCHMARK_RESULTS_CPYTHON_VS_RUST.md  BUILD_CONFIGURATION.md  CHANGELOG.md  CLAUDE.md  CUDA_THREADING_FIX.md  Cargo.toml  DUAL_USE_VENTURE_ASSESSMENT.md  IMPLEMENTATION_COMPLETE.md  INSTALL.md  LEGACY_ARCHIVE_SUMMARY.md  MIGRATION_STATUS.md  Makefile  PHASE_8_COMPLETION_REPORT.md  PIPELINE_RUN_INTEGRATION.md  QUICKSTART.md  README.md  RUSTPYTHON_BENCHMARK_PLAN.md  RUSTPYTHON_COMPATIBILITY_MATRIX.md  TRANSPORT_DECOUPLING_STATUS.md  WEBRTC_DOCUMENTATION_INDEX.md  WEBRTC_SERVER_ANALYSIS.md  WEBRTC_SERVER_QUICK_REFERENCE.md  WORKTREE_SETUP.md  benchmark_comparison.json  benchmark_ffi_pipeline.json  benchmark_multiprocess_comparison.json  benchmark_results_shm.json  benchmark_results_whisper.json  build-whisper-wasi.sh  debug_iox2_services.py  emotion_prompts.md  package-lock.json  package.json  pyproject.toml  (+18 more)
crates/candle-nodes/: Cargo.toml  README.md
crates/core/: Cargo.toml  README.md  build.rs  e2e_simple_results.txt
crates/core-derive/: Cargo.toml
crates/cubism-core/: Cargo.toml
crates/cubism-core-sys/: CUBISM_SDK.md  Cargo.toml  build.rs  wrapper.h
crates/hearing-nodes/: Cargo.toml
crates/python-nodes/: Cargo.toml  README.md
crates/rt-bridge/: Cargo.toml
crates/ui/: Cargo.toml  TESTING.md  build.rs
examples/: .gitignore  Cargo.toml  MODELS.md  README.md  lfm2_audio_control_bus_chat.py  lfm2_control_bus_chat.py  python_runtime_data_example.py  setup-windows.ps1
examples/00-getting-started/: README.md
examples/01-advanced/: README.md
examples/02-applications/: README.md
examples/audio_examples/: README.md  kokoro_tts.py  kokoro_tts_runtime_data.py  lfm2_audio_s2s.py  test_lfm2_pipeline.py  test_personaplex_pipeline.py  vad_lfm2_audio_streaming.py  vad_ultravox_kokoro_streaming.py
examples/aws-deployment/: Dockerfile  Dockerfile.gpu  GPU-SELECTION-GUIDE.md  QUICKSTART.md  README.md  cdk-deployment.ts  deploy-gpu.sh  docker-compose.yml  k8s-remote-tts.yaml  test-gpu-setup.sh
examples/custom-transport/: Cargo.toml  README.md
examples/docker-node/: EXAMPLES_GUIDE.md  QUICK_REFERENCE.md  README.md  advanced_docker_pipeline.json  custom_node.py  development_pipeline.json  docker_multiprocess_pipeline.json  echo_docker_node.json  gpu_accelerated_pipeline.json  manifest.yaml  microservices_pipeline.json  minimal_test.json  mixed_execution_pipeline.json  mixed_executors.json  production_pipeline.json  resource_constrained_pipeline.json  secure_docker_node.json  simple_docker_node.json  simple_docker_test.json
examples/feature-011-python-instances/: 00_registry_bypass_demo.py  01_basic_instance_execution.py  02_mixed_pipeline.py  03_serialization_for_multiprocess.py  04_all_input_types.py  05_error_handling.py  06_streaming_input_output.py  06_streaming_simple.py  07_batch_streaming_with_state.py  08_audio_streaming_pipeline.py  09_real_time_audio_processing.py  README.md
examples/inference-api/: README.md
examples/multiprocess/: concurrent_pipeline.rs  init_with_progress.py
examples/nextjs-tts-app/: .env.example  .env.local.example  .gitignore  BIDIRECTIONAL_AUDIO.md  GRPC-WEB-SETUP.md  PIPELINES.md  README.md  SPEECH_TO_SPEECH.md  WEBRTC_TTS_EXAMPLE.md  next.config.js  package-lock.json  package.json  server.js  server.ts  tailwind.config.js  test-resource-loader.js  test-tts.mjs  tsconfig.json
examples/proxy_examples/: generator_streaming_comparison.py  remote_proxy_example.py  simplest_proxy.py  streaming_solution.py
examples/remote-pipeline/: local_vad-remote_tts.json
examples/remote_class_execution_demo/: demo_with_pip_packages.py  remote_execution_client.py  run_demo.sh  sample_classes.py
examples/rust_runtime/: 01_basic_pipeline.py  02_calculator_pipeline.py  03_runtime_comparison.py  04_async_streaming.py  05_fallback_behavior.py  06_rust_vs_python_nodes.py  07_audio_vad_performance.py  08_realistic_media_benchmark.py  09_realtime_transcription_benchmark.py  10_whisperx_python_test.py  11_whisper_benchmark.py  12_audio_preprocessing_benchmark.py  12_audio_vad_rust.py  13_audio_resample_rust.py  14_audio_format_rust.py  15_full_audio_pipeline.py  README.md  WHISPER_SETUP.md  rust_whisper_pipeline.json  test_rwhisper_direct.py  whisper_benchmark_output.txt  whisperx_pipeline.json
examples/samples/: README.md
examples/shared-pipelines/: README.md  transcribe.yaml  tts.yaml  voice-assistant.yaml
examples/voice-assistant/: .gitignore  BUILD.md  README.md  build-cuda.bat  build-cuda.ps1  build.ps1  build.sh  dev.ps1  package-lock.json  package.json  tailwind.config.js  tauri-dev.ps1  vite.config.ts
libs/pipeline-runner/: Cargo.toml
libs/stream-health-analyzer/: Cargo.toml
runtime/: Cargo.toml  DEPRECATION_NOTICE.md  README.md  STREAMING-IMPROVEMENTS.md  SYSTEM_DIAGRAM.md  build.rs  temp_size_test.rs  test_full_output.txt
runtime-core/: Cargo.toml  README.md  build.rs  e2e_benchmark_results.txt
runtime-core-derive/: Cargo.toml
runtime-core-derive/src/: lib.rs
runtime-core/benches/: bench_docker_latency.rs  bench_latency.rs  bench_real_pipeline.rs  bench_real_vad_comparison.rs  bench_speculative_coordinator.rs  bench_streaming_scheduler.rs  bench_utterance_completion.rs  bench_vad_docker_pipeline.rs  bench_validation.rs  docker_e2e_pipeline.rs  docker_e2e_pipeline_simple.rs  docker_ipc_benchmark.rs  docker_vs_multiprocess.rs  shm_tensor_benchmark.rs
runtime-core/examples/: docker_log_forwarding_example.rs  docker_metrics_example.rs  node_registration_example.rs  test_streaming_e2e.rs  test_tar_creation.rs  test_video_flip.rs
runtime-core/src/: error.rs  lib.rs  manifest.rs
runtime-core/tests/: ingestion_tests.rs  mock_transport.rs  test_all_transports.rs  test_custom_transport.rs  test_node_macro.rs  test_node_registration_integration.rs  test_plugin_registry.rs  test_registration_macros.rs  test_remote_node.rs  transport_integration_test.rs
runtime/benches/: audio_nodes.rs  audio_nodes_fast.rs  ipc_latency.rs  (+5 more)
(+2390 files in other folders)
