[workspace]
members = [
    "runtime",
    "runtime-core",  # Phase 2: Core abstractions
    "transports/remotemedia-grpc",  # Phase 4: gRPC transport
    # "transports/remotemedia-ffi",   # To be created in Phase 5
    # "transports/remotemedia-webrtc", # To be created in Phase 7
]
exclude = [
    "examples/*",  # Examples are independent projects demonstrating usage
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
rust-version = "1.75"
authors = ["RemoteMedia SDK Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/matbeeDOTcom/remotemedia-sdk"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["sync", "macros", "io-util", "rt", "time"] }
tokio-stream = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
bincode = "1.3"

# Async trait support
async-trait = "0.1"

# Audio processing
rubato = "0.15"
rustfft = "6.2"
bytemuck = "1.14"
ort = { version = "2.0.0-rc.10", features = ["half", "download-binaries"] }
ndarray = "0.15"

# WASM runtime
wasmtime = "15.0"
wasmtime-wasi = "15.0"

# WebRTC
webrtc = "0.9"

# gRPC (for transport crates)
tonic = { version = "0.14", features = ["transport", "tls-ring"] }
tonic-web = "0.14.1"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
hyper = "1.1"

# Python FFI (for FFI transport crate)
pyo3 = { version = "0.26", features = ["abi3-py312", "auto-initialize"], default-features = false }
pyo3-async-runtimes = { version = "0.26", features = ["tokio-runtime"] }
numpy = "0.26"

# IPC for multiprocess
iceoryx2 = "0.7.0"
iceoryx2-bb-log = "0.7.0"
iceoryx2-bb-container = "0.7.0"
iceoryx2-bb-elementary = "0.7.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"

# Platform-specific
nix = { version = "0.30.1", features = ["signal", "process"] }
windows = { version = "0.52", features = ["Win32_System_ProcessStatus", "Win32_Foundation"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
num_cpus = "1.16"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
ctrlc = "3.4"
regex = "1.10"

# Whisper
rwhisper = "0.4"
whisper-rs = "0.15"
rodio = "0.20"

# WASM-specific
wlr-libpy = { git = "https://github.com/vmware-labs/webassembly-language-runtimes.git", default-features = false, features = ["py_main", "py312"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[workspace.dependencies.tokio-test]
version = "0.4"

[workspace.dependencies.criterion]
version = "0.5"
features = ["async_tokio"]

[workspace.dependencies.tempfile]
version = "3.8"

[workspace.dependencies.rand]
version = "0.8"

[workspace.dependencies.chrono]
version = "0.4"

[workspace.dependencies.hound]
version = "3.5"

# Build dependencies
[workspace.dependencies.prost-build]
version = "0.14"

[workspace.dependencies.tonic-build]
version = "0.14"

[workspace.dependencies.tonic-prost-build]
version = "0.14"
