[workspace]
members = [
    "runtime-core",  # Core abstractions
    "runtime-core-derive",  # Proc-macros for NodeConfig
    "transports/grpc",  # gRPC transport
    "transports/ffi",   # Python FFI transport
    "transports/webrtc", # WebRTC transport
    "transports/http",  # HTTP/REST transport with SSE
]
exclude = [
    "examples/*",  # Examples are independent projects demonstrating usage
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
rust-version = "1.87"
authors = ["RemoteMedia SDK Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/matbeeDOTcom/remotemedia-sdk"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["sync", "macros", "io-util", "rt", "rt-multi-thread", "time", "fs", "process"] }
tokio-stream = "0.1"
futures = "0.3"
bollard = { version = "0.19.4", features = ["chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
bincode = "1.3"
schemars = "0.8"
inventory = "0.3"

# Async trait support
async-trait = "0.1"

# Audio processing
rubato = "0.15"
rustfft = "6.2"
bytemuck = "1.14"
ort = { version = "2.0.0-rc.10", features = ["half", "download-binaries"] }
ndarray = "0.15"

# WASM runtime
wasmtime = "15.0"
wasmtime-wasi = "15.0"

# WebRTC
webrtc = "0.14.0"

# gRPC (for transport crates)
tonic = { version = "0.14", features = ["transport", "tls-ring"] }
tonic-web = "0.14.1"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
hyper = "1.1"
axum = "0.7"

# Python FFI (for FFI transport crate)
pyo3 = { version = "0.26", features = ["abi3-py310", "auto-initialize"], default-features = false }
pyo3-async-runtimes = { version = "0.26", features = ["tokio-runtime"] }
numpy = "0.26"

# IPC for multiprocess
iceoryx2 = "0.7.0"
iceoryx2-bb-log = "0.7.0"
iceoryx2-bb-container = "0.7.0"
iceoryx2-bb-elementary = "0.7.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"

# Platform-specific
nix = { version = "0.30.1", features = ["signal", "process"] }
windows = { version = "0.52", features = ["Win32_System_ProcessStatus", "Win32_Foundation"] }

# Error handling
anyhow = "1.0.100"
thiserror = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
num_cpus = "1.16"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
ctrlc = "3.4"
regex = "1.10"

# Low-latency streaming optimizations
crossbeam = "0.8"
hdrhistogram = "7.5"

# Docker/build utilities
tar = "0.4"
glob = "0.3"
bytes = "1.0"
http-body-util = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }

# Whisper
rwhisper = "0.4"
whisper-rs = "0.15"
rodio = "0.20"

# WASM-specific
wlr-libpy = { git = "https://github.com/vmware-labs/webassembly-language-runtimes.git", default-features = false, features = ["py_main", "py312"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[workspace.dependencies.tokio-test]
version = "0.4"

[workspace.dependencies.criterion]
version = "0.5"
features = ["async_tokio"]

[workspace.dependencies.tempfile]
version = "3.8"

[workspace.dependencies.rand]
version = "0.8"

[workspace.dependencies.chrono]
version = "0.4"

[workspace.dependencies.hound]
version = "3.5"

# Build dependencies
[workspace.dependencies.prost-build]
version = "0.14"

[workspace.dependencies.tonic-build]
version = "0.14"

[workspace.dependencies.tonic-prost-build]
version = "0.14"

[workspace.lints.rust]
missing_docs = "allow"

# Optimize dependencies in dev mode, but keep your code unoptimized for fast compilation
[profile.dev.package."*"]
opt-level = 1

[profile.dev]
opt-level = 0
debug = 1  # Reduce debug info
incremental = true
split-debuginfo = "unpacked"  # Faster on Linux

# Create a "fast" profile for everyday development
[profile.fast]
inherits = "dev"
opt-level = 1

# Optimize heavy crates even in dev mode
[profile.dev.package.webrtc]
opt-level = 2

[profile.dev.package.webrtc-ice]
opt-level = 2

[profile.dev.package.openssl]
opt-level = 2

[profile.dev.package.bollard-stubs]
opt-level = 2

[profile.dev.package.pyo3-macros]
opt-level = 2