[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "remotemedia-monorepo"
version = "0.1.0"
description = "RemoteMedia Processing - Mono-repo for distributed audio/video/data processing"
authors = [{name = "Mathieu Gosbee", email = "mail@matbee.com"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["."]
include = ["remotemedia.client*", "remotemedia.service*"]

[tool.pip-tools]
resolver = "backtracking"

[tool.pytest.ini_options]
testpaths = ["tests", "python-client/tests", "service/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true