[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "remotemedia"
version = "0.1.0"
description = "RemoteMedia Processing - Distributed audio/video/data processing framework"
authors = [{name = "Mathieu Gosbee", email = "mail@matbee.com"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    # Base client SDK dependencies (default installation)
    "protobuf>=4.21.0",
    "grpcio>=1.50.0",
    "grpcio-tools>=1.50.0",
    "numpy>=1.21.0",
    "av>=14.0.0",
    "cloudpickle>=2.2.0",
]

[project.optional-dependencies]
service = [
    # Additional service dependencies (beyond base client)
    "grpcio-health-checking>=1.50.0",
    "aiortc>=1.13.0",
    "aiohttp>=3.10.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "structlog>=22.0.0",
    "asyncio-mqtt>=0.11.0",
    "aiohttp-cors>=0.7.0",
]
dev = [
    # Development dependencies
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-grpc>=0.8.0",
]
ml = [
    # Machine learning dependencies
    "librosa>=0.11.0",
    "soundfile>=0.13.1",
]
all = [
    # All dependencies (service + dev + ml)
    "remotemedia[service,dev,ml]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["remotemedia*"]

[tool.pip-tools]
resolver = "backtracking"

[tool.pytest.ini_options]
testpaths = ["tests", "python-client/tests", "service/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true