[package]
name = "remotemedia-runtime-core-derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Proc-macros for RemoteMedia runtime-core (NodeConfig derive)"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
