[package]
name = "remotemedia-runtime-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Core runtime library for RemoteMedia pipelines - transport-agnostic execution engine"
license.workspace = true
repository.workspace = true

[lib]
name = "remotemedia_runtime_core"
crate-type = ["rlib"]

[dependencies]
# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
bincode = { workspace = true }
schemars = { workspace = true }
inventory = { workspace = true }
jsonschema = { workspace = true }

# Proc-macros for NodeConfig
remotemedia-runtime-core-derive = { path = "../runtime-core-derive" }

# Async trait support
async-trait = { workspace = true }

# StreamingScheduler drift metrics (spec 026)
bitflags = { workspace = true }

# Audio processing (for native nodes)
rubato = { workspace = true }
rustfft = { workspace = true }
bytemuck = { workspace = true }
ort = { workspace = true, optional = true }
ndarray = { workspace = true }

# Whisper transcription support (CPU by default, use 'cuda' feature for GPU)
rwhisper = { version = "0.4" }
rodio = "0.20"  # Match rwhisper's rodio version
base64 = "0.22"

# Speaker diarization (uses ONNX models) - using git for ort 2.x compatibility
pyannote-rs = { git = "https://github.com/thewh1teagle/pyannote-rs", optional = true }

# Video codec support (spec 012)
ac-ffmpeg = { version = "0.19", optional = true }
rav1e = { version = "0.8", optional = true }
dav1d = { version = "0.10", optional = true }

# IPC for multiprocess
iceoryx2 = { workspace = true, optional = true }
iceoryx2-bb-log = { workspace = true, optional = true }
iceoryx2-bb-container = { workspace = true, optional = true }
iceoryx2-bb-elementary = { workspace = true, optional = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
bollard = { workspace = true }
hex.workspace = true
num_cpus.workspace = true
rand.workspace = true
glob.workspace = true
rusqlite.workspace = true
uuid.workspace = true
thiserror.workspace = true
bytes.workspace = true
tar.workspace = true
reqwest.workspace = true
chrono.workspace = true
regex.workspace = true
histogram = "0.11.3"
crossbeam.workspace = true
sha2.workspace = true
hdrhistogram.workspace = true
hyper = { workspace = true, features = ["full"] }
http-body-util = { version = "0.1", optional = true }

# Platform-specific
[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# gRPC client (for remote pipeline nodes)
tonic = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
prost-types = { workspace = true, optional = true }

# Utilities
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
num_cpus = { workspace = true }
regex = { workspace = true }
ctrlc = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
url = { workspace = true }

# Low-latency streaming optimizations (spec 007)
crossbeam = { workspace = true }
hdrhistogram = { workspace = true }

# Docker executor (spec 009)
bollard = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
tar = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
# hyper and http-body-util are transitive deps from bollard, add them directly
hyper = { workspace = true, optional = true }
http-body-util = { version = "0.1", optional = true }
glob = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
hound = { workspace = true }
anyhow = { workspace = true }
remotemedia-grpc = { path = "../transports/grpc" }
axum = { workspace = true }
tokio-stream = { workspace = true }

[features]
default = ["multiprocess", "silero-vad", "docker", "video"]
multiprocess = ["iceoryx2", "iceoryx2-bb-log", "iceoryx2-bb-container", "iceoryx2-bb-elementary"]
silero-vad = ["ort"]
speaker-diarization = ["ort", "dep:pyannote-rs"]
grpc-client = ["tonic", "prost", "prost-types"]
# Docker support integrated into multiprocess system
docker = ["dep:bollard", "dep:tar", "dep:chrono", "dep:bytes", "dep:hyper", "dep:http-body-util", "dep:glob", "dep:rusqlite"]
# Video codec support (spec 012)
video = ["dep:ac-ffmpeg"]
video-pure-rust = ["video", "dep:rav1e", "dep:dav1d"]
# CUDA acceleration for whisper (requires CUDA 12.x toolkit installed)
cuda = ["rwhisper/cuda"]

# NOTE: grpc-client is for RemotePipelineNode client functionality only
# Full transport implementations belong in separate transport crates

# Integration tests for low-latency streaming (spec 007)
[[test]]
name = "test_speculative_vad"
path = "tests/integration/test_speculative_vad.rs"

[[test]]
name = "test_speculative_vad_coordinator"
path = "tests/integration/test_speculative_vad_coordinator.rs"

[[test]]
name = "test_control_messages"
path = "tests/integration/test_control_messages.rs"

# Old Docker executor tests removed - use test_docker_multiprocess instead

# Integration test for basic Docker multiprocess execution (T021)
[[test]]
name = "test_docker_multiprocess"
path = "tests/integration/test_docker_multiprocess.rs"

# Comprehensive E2E test for Docker multiprocess integration
[[test]]
name = "test_docker_multiprocess_e2e"
path = "tests/integration/test_docker_multiprocess_e2e.rs"

# Test for Docker image building and caching (T031)
[[test]]
name = "test_docker_image_builder"
path = "tests/integration/test_docker_image_builder.rs"

# Test for Docker resource limit enforcement (T041)
[[test]]
name = "test_docker_resource_limits"
path = "tests/integration/test_docker_resource_limits.rs"

# Integration test for parameter validation (T025-T027)
[[test]]
name = "test_param_validation"
path = "tests/integration/test_param_validation.rs"

# Cross-transport validation consistency test (T034)
[[test]]
name = "test_transport_consistency"
path = "tests/integration/test_transport_consistency.rs"

# Benchmarks for latency measurement
[[bench]]
name = "bench_latency"
path = "benches/bench_latency.rs"
harness = false

[[bench]]
name = "bench_real_vad_comparison"
path = "benches/bench_real_vad_comparison.rs"
harness = false

[[bench]]
name = "bench_utterance_completion"
path = "benches/bench_utterance_completion.rs"
harness = false

[[bench]]
name = "bench_real_pipeline"
path = "benches/bench_real_pipeline.rs"
harness = false

[[bench]]
name = "bench_docker_latency"
path = "benches/bench_docker_latency.rs"
harness = false

[[bench]]
name = "docker_vs_multiprocess"
path = "benches/docker_vs_multiprocess.rs"
harness = false

[[bench]]
name = "docker_e2e_pipeline"
path = "benches/docker_e2e_pipeline.rs"
harness = false

[[bench]]
name = "docker_e2e_pipeline_simple"
path = "benches/docker_e2e_pipeline_simple.rs"
harness = false

[[bench]]
name = "docker_ipc_benchmark"
path = "benches/docker_ipc_benchmark.rs"
harness = false

[[bench]]
name = "bench_vad_docker_pipeline"
path = "benches/bench_vad_docker_pipeline.rs"
harness = false

[[bench]]
name = "bench_speculative_coordinator"
path = "benches/bench_speculative_coordinator.rs"
harness = false

[[bench]]
name = "bench_validation"
path = "benches/bench_validation.rs"
harness = false

# StreamingScheduler and DriftMetrics benchmarks (spec 026)
[[bench]]
name = "bench_streaming_scheduler"
path = "benches/bench_streaming_scheduler.rs"
harness = false
