[package]
name = "remotemedia-runtime"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["RemoteMedia SDK Contributors"]
description = "Language-neutral runtime for distributed AI pipelines"
license = "MIT OR Apache-2.0"
repository = "https://github.com/matbeeDOTcom/remotemedia-sdk"

[lib]
name = "remotemedia_runtime"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Async runtime
# For WASM, only certain tokio features are supported
tokio = { version = "1.35", features = ["sync", "macros", "io-util", "rt", "time"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async trait support
async-trait = "0.1"

# RustPython VM for backward compatibility
rustpython = "0.4.0"

# WASM runtime (Wasmtime chosen per design decisions)
# Note: Only needed for native builds that run WASM nodes, not when compiling TO wasm
wasmtime = { version = "15.0", optional = true }
wasmtime-wasi = { version = "15.0", optional = true }

# WebRTC (for Phase 2)
webrtc = { version = "0.9", optional = true }

# gRPC (existing transport) - not available for WASM
tonic = { version = "0.10", optional = true }
prost = { version = "0.12", optional = true }

# Python FFI (using PyO3 per recommendation)
pyo3 = { version = "0.26", features = ["extension-module", "abi3-py312", "auto-initialize"] }
pyo3-async-runtimes = { version = "0.26", features = ["tokio-runtime"], optional = true }
numpy = { version = "0.26", optional = true }  # rust-numpy for zero-copy numpy array support (not available in WASM)

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"

# Whisper transcription
rwhisper = { version = "0.4", optional = true }
rodio = { version = "0.20", optional = true }

# WASM-specific dependencies (only for wasm32-wasi target)
[target.'cfg(target_family = "wasm")'.dependencies]
wlr-libpy = { git = "https://github.com/vmware-labs/webassembly-language-runtimes.git", default-features = false, features = ["py_main", "py312"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
tempfile = "3.8"

[build-dependencies]
prost-build = { version = "0.12", optional = true }
tonic-build = { version = "0.10", optional = true }

# WASM-specific build dependencies (only for wasm32-wasi target)
[target.'cfg(target_family = "wasm")'.build-dependencies]
wlr-libpy = { git = "https://github.com/vmware-labs/webassembly-language-runtimes.git", default-features = false, features = ["build", "py312"] }

[features]
default = ["webrtc-transport", "wasmtime-runtime", "grpc-transport", "python-async", "native-numpy"]
webrtc-transport = ["webrtc"]
grpc-transport = ["tonic", "prost"]
python-async = ["pyo3-async-runtimes"]
native-numpy = ["numpy"]
whisper = ["rwhisper", "rodio"]
wasmtime-runtime = ["wasmtime", "wasmtime-wasi"]
wasm = []  # Enable WASM-specific code paths (no wasmtime, no webrtc, no grpc, no async python, no numpy)

# WASM binary target
[[bin]]
name = "pipeline_executor_wasm"
path = "src/bin/pipeline_executor_wasm.rs"
required-features = ["wasm"]

[[bench]]
name = "pipeline_execution"
harness = false

[[bench]]
name = "data_marshaling"
harness = false

[[bench]]
name = "rustpython_nodes"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
