[package]
name = "remotemedia-runtime"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
authors = ["RemoteMedia SDK Contributors"]
description = "Language-neutral runtime for distributed AI pipelines with native Rust acceleration"
license = "MIT OR Apache-2.0"
repository = "https://github.com/matbeeDOTcom/remotemedia-sdk"

[lib]
name = "remotemedia_runtime"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Async runtime
# For WASM, only certain tokio features are supported
tokio = { version = "1.35", features = ["sync", "macros", "io-util", "rt", "time"] }
tokio-stream = { version = "0.1", optional = true }  # For gRPC streaming
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"     # For configuration file loading
bincode = "1.3"  # For efficient binary serialization in IPC

# Async trait support
async-trait = "0.1"

# Audio processing libraries
rubato = "0.15"      # High-quality audio resampling
rustfft = "6.2"      # FFT for VAD (Voice Activity Detection)
bytemuck = "1.14"    # Zero-copy format conversion
ort = { version = "2.0.0-rc.10", features = ["half", "download-binaries"], optional = true }  # ONNX Runtime for Silero VAD
ndarray = "0.15"     # N-dimensional arrays for tensor operations

# WASM runtime (Wasmtime chosen per design decisions)
# Note: Only needed for native builds that run WASM nodes, not when compiling TO wasm
wasmtime = { version = "15.0", optional = true }
wasmtime-wasi = { version = "15.0", optional = true }

# WebRTC (for Phase 2)
webrtc = { version = "0.9", optional = true }

# gRPC (existing transport) - not available for WASM
tonic = { version = "0.14", optional = true, features = ["transport", "tls-ring"] }
tonic-web = { version = "0.14.1", optional = true }
tonic-prost = { version = "0.14", optional = true }
prost = { version = "0.14", optional = true }
prost-types = { version = "0.14", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", optional = true, features = ["cors"] }
hyper = { version = "1.1", optional = true }

# Python FFI (using PyO3 per recommendation)
# For native builds: use extension-module for Python extensions
# For WASM builds: use abi3 only (no extension-module, no auto-initialize)
pyo3 = { version = "0.26", features = ["abi3-py312", "auto-initialize"], default-features = false }
pyo3-async-runtimes = { version = "0.26", features = ["tokio-runtime"], optional = true }
numpy = { version = "0.26", optional = true }  # rust-numpy for zero-copy numpy array support (not available in WASM)

# IPC for multiprocess support
iceoryx2 = { version = "0.7.0", optional = true }
iceoryx2-bb-log = { version = "0.7.0", optional = true }
iceoryx2-bb-container = { version = "0.7.0", optional = true }
iceoryx2-bb-elementary = { version = "0.7.0", optional = true }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = { version = "0.13", optional = true }

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["signal", "process"] }

# Windows memory measurement
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["Win32_System_ProcessStatus", "Win32_Foundation"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
num_cpus = "1.16"  # For T036: Multi-threaded runtime configuration
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }  # For model downloading
ctrlc = "3.4"  # For robust Ctrl+C signal handling

# Whisper transcription
rwhisper = { version = "0.4", optional = true }
whisper-rs = { version = "0.15", optional = true }
rodio = { version = "0.20", optional = true }

# WASM-specific dependencies (only for wasm32-wasi target)
[target.'cfg(target_family = "wasm")'.dependencies]
wlr-libpy = { git = "https://github.com/vmware-labs/webassembly-language-runtimes.git", default-features = false, features = ["py_main", "py312"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# Override tokio for WASM with minimal features
tokio = { version = "1.35", default-features = false, features = ["sync", "macros", "io-util", "rt", "time"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3.8"
rand = "0.8"
chrono = "0.4"
hound = "3.5"  # For reading WAV files in tests

# Windows memory measurement for tests
[target.'cfg(windows)'.dev-dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_ProcessStatus", "Win32_Foundation"] }

[build-dependencies]
prost-build = "0.14"
tonic-build = "0.14"
tonic-prost-build = "0.14"
# wlr-libpy needs to be a regular build-dependency since build.rs runs on host
# It will only be used when building for WASM target (checked in build.rs)
wlr-libpy = { git = "https://github.com/vmware-labs/webassembly-language-runtimes.git", default-features = false, features = ["build", "py312"] }

[features]
default = ["webrtc-transport", "wasmtime-runtime", "grpc-transport", "python-async", "native-numpy", "silero-vad", "multiprocess"]
webrtc-transport = ["webrtc"]
grpc-transport = ["tonic", "tonic-web", "tonic-prost", "prost", "prost-types", "tower", "tower-http", "hyper", "prometheus", "tokio-stream"]
python-async = ["pyo3-async-runtimes"]
native-numpy = ["numpy"]
whisper = ["rwhisper", "rodio"]
whisper-wasm = ["whisper-rs"]
wasmtime-runtime = ["wasmtime", "wasmtime-wasi"]
silero-vad = ["ort"]  # Silero VAD using ONNX Runtime
multiprocess = ["iceoryx2", "iceoryx2-bb-log", "iceoryx2-bb-container", "iceoryx2-bb-elementary"]  # Multiprocess Python nodes with shared memory IPC
wasm = []  # Enable WASM-specific code paths (no wasmtime, no webrtc, no grpc, no async python, no numpy)

# WASM binary target
[[bin]]
name = "pipeline_executor_wasm"
path = "src/bin/pipeline_executor_wasm.rs"
required-features = ["wasm"]

# gRPC server binary
[[bin]]
name = "grpc_server"
path = "bin/grpc_server.rs"
required-features = ["grpc-transport"]

# gRPC client binary
[[bin]]
name = "grpc_client"
path = "bin/grpc_client.rs"
required-features = ["grpc-transport"]

[[bench]]
name = "pipeline_execution"
harness = false

[[bench]]
name = "data_marshaling"
harness = false

[[bench]]
name = "rustpython_nodes"
harness = false

[[bench]]
name = "audio_nodes"
harness = false

[[bench]]
name = "audio_nodes_profiling"
harness = false

[[bench]]
name = "audio_nodes_fast"
harness = false

[[bench]]
name = "audio_nodes_resample_vad"
harness = false

[[bench]]
name = "ipc_latency"
harness = false
required-features = ["multiprocess"]

[[bench]]
name = "multiprocess_vad_pipeline"
harness = false
required-features = ["multiprocess"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
